--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,8 +50,21 @@ body {
   left: 0px;
 }
 
+
+
 .eu {
   margin-left: 17px;
+}
+
+.editarNome{
+  display: flex;
+}
+
+.editarNome img{
+  width: 14px;
+  margin-left: 8px;
+  color: #8E8E8E;
+
 }
 
 .nickname {
@@ -129,6 +142,8 @@ body {
 
 .perfil_usuario {
   width: 56px;
+  height: 56px;
+  border-radius: 500px;
 }
 
 .insta {
